--- a/src/components/statistical/topBook.styles.scss
+++ b/src/components/statistical/topBook.styles.scss
@@ -3,6 +3,7 @@
     font-style: normal;
     padding: 1em;
     border-radius: 10px;
+    width: 100%;
 
     .static-product-title {
         color: var(--white-color-v2) !important;
