--- a/src/components/sidebar/style.sidebar.scss
+++ b/src/components/sidebar/style.sidebar.scss
@@ -1,5 +1,5 @@
 .main-sidebar {
-    height: 100vh;
+    height: 100%;
     background-color: #CF0201ed;
     width: 220px;
     font-family: Arial, Helvetica, sans-serif;
